Added slide in from top animation to beacontext
Modified instructionview layout

Added slide in from top animation to beacontext

added some comments

--- a/app/src/main/res/layout/activity_instruction_view_layout.xml
+++ b/app/src/main/res/layout/activity_instruction_view_layout.xml
@@ -58,21 +58,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#EA3636"
+            android:background="@color/background_color"
+            android:gravity="center"
             android:text="SUP YALL. SEARCHING FOR THAT YOUNG ENTRANCE"
+            android:textAlignment="center"
+            android:textColor="@color/text_color"
             android:textSize="36sp" />
     </LinearLayout>
 
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/startNavigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center_horizontal"
-        android:text="@string/start_navigation"
-        android:textColor="@android:color/white"
-        android:visibility="gone"
-        tools:visibility="visible" />
 
     <com.mapbox.navigation.ui.summary.SummaryBottomSheet
         android:id="@+id/summaryBottomSheet"
