--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="ic_settings_color">#FFFFFFFF</color>
     <color name="ic_attachment_color">#FFFFFFFF</color>
     <color name="background_color">#000000</color>
+    <color name="card_background_color">#ffffff</color>
     <color name="ic_color_lens_color">#FFFFFFFF</color>
-
     <color name="button_text_color">#000000</color>
     <color name="text_color">#FFFFFF</color>
 </resources>
