--- a/app/src/main/res/layout/fragment_tutorial_text.xml
+++ b/app/src/main/res/layout/fragment_tutorial_text.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:scrollbars="vertical">
@@ -9,7 +9,7 @@
 
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".ui.tutorial.TutorialTextFragment">
