--- a/app/src/main/res/layout/bluetooth_connect_dialog.xml
+++ b/app/src/main/res/layout/bluetooth_connect_dialog.xml
@@ -6,10 +6,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/incoming_bt_message"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"/>
     <ListView
         android:id="@+id/BTListOfDevices"
         android:layout_width="fill_parent"
         android:layout_height="200dp" >
-
     </ListView>
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+        <Button
+            android:id="@+id/bt_light_button"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:padding="100dp"
+            android:background="@color/white"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/black"
+            android:text="Light"
+            />
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="10dp"/>
+        <Button
+            android:id="@+id/bt_sound_button"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:padding="100dp"
+            android:background="@color/white"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/black"
+            android:text="Beep"/>
+        </LinearLayout>
 </LinearLayout>
